Refactor authentication and user management: switch to HTTPBearer for token validation, normalize phone number format, and enhance password hashing with SHA-256

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ alembic==1.12.1
 # Pydantic
 pydantic==2.5.0
 pydantic-settings==2.1.0
+phonenumbers==9.0.18
+pydantic-extra-types==2.1.0
 
 # Security
 python-jose[cryptography]==3.3.0
