--- a/backend/Makefile
+++ b/backend/Makefile
@@ -11,7 +11,7 @@ help:
 	@echo "  make clean         - Remove cache files"
 
 install:
-	pip install -r backend/requirements.txt
+	pip install -r requirements.txt
 
 db-init:
 	alembic init alembic
