--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,32 @@
-# FastAPI
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-
-# Database
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-alembic==1.12.1
-
-# Pydantic
-pydantic==2.5.0
-pydantic-settings==2.1.0
-phonenumbers==9.0.18
-pydantic-extra-types==2.1.0
-
-# Security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-
-# Environment
-python-dotenv==1.0.0
+alembic==1.17.2
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.11.0
+asyncpg==0.30.0
+bcrypt==4.0.1
+click==8.3.1
+ecdsa==0.19.1
+fastapi==0.121.3
+greenlet==3.2.4
+h11==0.16.0
+idna==3.11
+Mako==1.3.10
+MarkupSafe==3.0.3
+passlib==1.7.4
+phonenumbers==9.0.19
+psycopg2==2.9.11
+pyasn1==0.6.1
+pydantic==2.12.4
+pydantic-extra-types==2.10.6
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+python-dotenv==1.2.1
+python-jose==3.5.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+starlette==0.50.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.38.0
