Enhance authentication endpoints: set cookies for access and refresh tokens on login and refresh, implement logout functionality, and improve lifespan logging in the FastAPI application.

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -26,7 +26,7 @@ db-downgrade:
 	alembic downgrade -1
 
 run:
-	cd $(CURDIR) && uvicorn main:app --reload --host 0.0.0.0 --port 8008 --app-dir .
+	uvicorn backend.main:app --reload --host 0.0.0.0 --port 8008
 
 clean:
 	find . -type d -name "__pycache__" -exec rm -rf {} +
